--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,1 +1,41 @@
+.toggle-box input[type=checkbox] {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
 
+.toggle-box .switch {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 50px;
+  height: 25px;
+  background: grey;
+  display: block;
+  border-radius: 100px;
+  position: relative;
+}
+
+.toggle-box .switch:after {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 21px;
+  height: 21px;
+  background: #fff;
+  border-radius: 90px;
+  transition: 0.2s;
+}
+
+.toggle-box input:checked + .switch {
+  background: #22e2e9;
+}
+
+.toggle-box input:checked + .switch:after {
+  left: calc(100% - 2px);
+  transform: translateX(-100%);
+}
+
+.toggle-box .switch:active:after {
+  width: 46px;
+}
