--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,46 +1,45 @@
-// .toggle-box {
-    input{
-        background-color: black !important;
-    }
+.toggle-box {
+    
     input[type=checkbox]{
 	height: 0;
 	width: 0;
 	visibility: hidden;
     }
 
-    label {
+    .switch {
         cursor: pointer;
         text-indent: -9999px;
-        width: 200px;
-        height: 100px;
+        width: 50px;
+        height: 25px;
         background: grey;
         display: block;
         border-radius: 100px;
         position: relative;
     }
 
-    label:after {
+    .switch:after {
         content: '';
         position: absolute;
-        top: 5px;
-        left: 5px;
-        width: 90px;
-        height: 90px;
+        top: 2px;
+        left: 2px;
+        width: 21px;
+        height: 21px;
         background: #fff;
         border-radius: 90px;
-        transition: 0.3s;
+        transition: 0.2s;
     }
 
-    input:checked + label {
-        background: #bada55;
+    input:checked + .switch {
+        background: #22e2e9;
     }
 
-    input:checked + label:after {
-        left: calc(100% - 5px);
+    input:checked + .switch:after {
+        left: calc(100% - 2px);
         transform: translateX(-100%);
     }
 
-    label:active:after {
-        width: 130px;
+    .switch:active:after {
+        width: 46px;
     }
-// }
+    
+}
